anaconda builds: use anaconda gcc

--- a/maintenance/anaconda/meta.yaml
+++ b/maintenance/anaconda/meta.yaml
@@ -11,6 +11,11 @@ requirements:
   build:
     - python
     - numpy
+    - {{ compiler('c') }}
+    - setuptools
+  host:
+    - python
+    - numpy
   run:
     - python
     - numpy
